--- a/main/project/webpage.css
+++ b/main/project/webpage.css
@@ -622,6 +622,10 @@ video {
   z-index: 50;
 }
 
+.z-20 {
+  z-index: 20;
+}
+
 .col-start-1 {
   grid-column-start: 1;
 }
@@ -655,6 +659,11 @@ video {
   margin-right: 1rem;
 }
 
+.mx-\[6\%\] {
+  margin-left: 6%;
+  margin-right: 6%;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -670,9 +679,29 @@ video {
   margin-bottom: 1rem;
 }
 
+.my-\[6\%\] {
+  margin-top: 6%;
+  margin-bottom: 6%;
+}
+
 .my-auto {
   margin-top: auto;
   margin-bottom: auto;
+}
+
+.mx-\[2\%\] {
+  margin-left: 2%;
+  margin-right: 2%;
+}
+
+.mx-\[5\%\] {
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.my-\[5\%\] {
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
 
 .mb-10 {
@@ -815,6 +844,14 @@ video {
   height: 100svh;
 }
 
+.h-3\/5 {
+  height: 60%;
+}
+
+.h-\[calc\(100vh-40px\)\] {
+  height: calc(100vh - 40px);
+}
+
 .max-h-\[1300px\] {
   max-height: 1300px;
 }
@@ -919,6 +956,10 @@ video {
   width: 100vw;
 }
 
+.w-svw {
+  width: 100svw;
+}
+
 @keyframes bounce {
   0%, 100% {
     transform: translateY(-25%);
@@ -951,6 +992,10 @@ video {
 
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .grid-rows-1 {
@@ -1042,6 +1087,10 @@ video {
   row-gap: 3rem;
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .rounded-2xl {
   border-radius: 1rem;
 }
@@ -1118,6 +1167,10 @@ video {
   border-top-width: 1px;
 }
 
+.border-b-8 {
+  border-bottom-width: 8px;
+}
+
 .border-dashed {
   border-style: dashed;
 }
@@ -1155,6 +1208,11 @@ video {
 .border-red-200 {
   --tw-border-opacity: 1;
   border-color: rgb(254 202 202 / var(--tw-border-opacity));
+}
+
+.border-yellow-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(250 204 21 / var(--tw-border-opacity));
 }
 
 .bg-black {
@@ -1875,14 +1933,39 @@ video {
   background-attachment: fixed;
 }
 
-.after\:absolute::after {
+.before\:absolute::before {
   content: var(--tw-content);
   position: absolute;
 }
 
-.after\:left-24::after {
+.before\:top-5::before {
   content: var(--tw-content);
-  left: 6rem;
+  top: 1.25rem;
+}
+
+.before\:w-1\/2::before {
+  content: var(--tw-content);
+  width: 50%;
+}
+
+.before\:w-1::before {
+  content: var(--tw-content);
+  width: 0.25rem;
+}
+
+.before\:w-1\/3::before {
+  content: var(--tw-content);
+  width: 33.333333%;
+}
+
+.before\:content-\[\'\'\]::before {
+  --tw-content: '';
+  content: var(--tw-content);
+}
+
+.after\:absolute::after {
+  content: var(--tw-content);
+  position: absolute;
 }
 
 .after\:-left-24::after {
@@ -1890,14 +1973,19 @@ video {
   left: -6rem;
 }
 
+.after\:top-5::after {
+  content: var(--tw-content);
+  top: 1.25rem;
+}
+
+.after\:contents::after {
+  content: var(--tw-content);
+  display: contents;
+}
+
 .after\:h-full::after {
   content: var(--tw-content);
   height: 100%;
-}
-
-.after\:w-1\/2::after {
-  content: var(--tw-content);
-  width: 50%;
 }
 
 .after\:w-1\/3::after {
@@ -1905,10 +1993,34 @@ video {
   width: 33.333333%;
 }
 
-.after\:skew-x-6::after {
+.after\:w-2\/3::after {
   content: var(--tw-content);
-  --tw-skew-x: 6deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  width: 66.666667%;
+}
+
+.after\:w-1\/5::after {
+  content: var(--tw-content);
+  width: 20%;
+}
+
+.after\:w-1\/4::after {
+  content: var(--tw-content);
+  width: 25%;
+}
+
+.after\:w-1\/2::after {
+  content: var(--tw-content);
+  width: 50%;
+}
+
+.after\:w-16::after {
+  content: var(--tw-content);
+  width: 4rem;
+}
+
+.after\:w-4::after {
+  content: var(--tw-content);
+  width: 1rem;
 }
 
 .after\:skew-x-12::after {
@@ -1917,14 +2029,72 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.after\:bg-blue-600::after {
+.after\:skew-x-1::after {
   content: var(--tw-content);
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+  --tw-skew-x: 1deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.after\:content-\[\'fbgvfd\'\]::after {
-  --tw-content: 'fbgvfd';
+.after\:skew-x-6::after {
+  content: var(--tw-content);
+  --tw-skew-x: 6deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.after\:border::after {
+  content: var(--tw-content);
+  border-width: 1px;
+}
+
+.after\:border-b::after {
+  content: var(--tw-content);
+  border-bottom-width: 1px;
+}
+
+.after\:border-b-4::after {
+  content: var(--tw-content);
+  border-bottom-width: 4px;
+}
+
+.after\:border-r::after {
+  content: var(--tw-content);
+  border-right-width: 1px;
+}
+
+.after\:border-red-700::after {
+  content: var(--tw-content);
+  --tw-border-opacity: 1;
+  border-color: rgb(185 28 28 / var(--tw-border-opacity));
+}
+
+.after\:bg-yellow-400::after {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(250 204 21 / var(--tw-bg-opacity));
+}
+
+.after\:underline::after {
+  content: var(--tw-content);
+  text-decoration-line: underline;
+}
+
+.after\:content-\[\'\'\]::after {
+  --tw-content: '';
+  content: var(--tw-content);
+}
+
+.after\:content-\[\]::after {
+  --tw-content: ;
+  content: var(--tw-content);
+}
+
+.after\:content-\[\'fc\'\]::after {
+  --tw-content: 'fc';
+  content: var(--tw-content);
+}
+
+.after\:content-\[\'--\'\]::after {
+  --tw-content: '--';
   content: var(--tw-content);
 }
 
@@ -2099,6 +2269,10 @@ video {
     display: flex;
   }
 
+  .md\:grid {
+    display: grid;
+  }
+
   .md\:h-\[120svh\] {
     height: 120svh;
   }
@@ -2113,6 +2287,10 @@ video {
 
   .md\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .md\:grid-rows-2 {
