--- a/main/project/webpage.css
+++ b/main/project/webpage.css
@@ -610,10 +610,6 @@ video {
   top: 1.25rem;
 }
 
-.-left-20 {
-  left: -5rem;
-}
-
 .z-10 {
   z-index: 10;
 }
@@ -692,6 +688,10 @@ video {
   margin-bottom: 3rem;
 }
 
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
 .mb-3 {
   margin-bottom: 0.75rem;
 }
@@ -736,12 +736,20 @@ video {
   margin-top: 2rem;
 }
 
-.mb-2 {
-  margin-bottom: 0.5rem;
+.ml-8 {
+  margin-left: 2rem;
 }
 
-.block {
-  display: block;
+.ml-20 {
+  margin-left: 5rem;
+}
+
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
+.inline-block {
+  display: inline-block;
 }
 
 .flex {
@@ -754,6 +762,10 @@ video {
 
 .hidden {
   display: none;
+}
+
+.aspect-square {
+  aspect-ratio: 1 / 1;
 }
 
 .h-1\/2 {
@@ -830,6 +842,42 @@ video {
 
 .h-svh {
   height: 100svh;
+}
+
+.h-\[calc\(100vh-60px\)\] {
+  height: calc(100vh - 60px);
+}
+
+.h-\[calc\(100vh-0px\)\] {
+  height: calc(100vh - 0px);
+}
+
+.h-\[calc\(100vh-90px\)\] {
+  height: calc(100vh - 90px);
+}
+
+.h-2\/5 {
+  height: 40%;
+}
+
+.h-\[80\%\] {
+  height: 80%;
+}
+
+.h-\[400px\] {
+  height: 400px;
+}
+
+.h-\[300px\] {
+  height: 300px;
+}
+
+.h-\[15x0px\] {
+  height: 15x0px;
+}
+
+.h-\[200px\] {
+  height: 200px;
 }
 
 .max-h-\[1300px\] {
@@ -936,6 +984,59 @@ video {
   width: 100vw;
 }
 
+.w-\[\%\] {
+  width: %;
+}
+
+.w-\[8\%\] {
+  width: 8%;
+}
+
+.w-\[0\%\] {
+  width: 0%;
+}
+
+.w-\[85\%\] {
+  width: 85%;
+}
+
+.w-8 {
+  width: 2rem;
+}
+
+.w-\[\] {
+  width: ;
+}
+
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.max-w-\[\] {
+  max-width: ;
+}
+
+.max-w-\[500px\] {
+  max-width: 500px;
+}
+
+.max-w-\[480px\] {
+  max-width: 480px;
+}
+
+.max-w-\[80\] {
+  max-width: 80;
+}
+
+.max-w-\[80\%\] {
+  max-width: 80%;
+}
+
+.max-w-\[90\%\] {
+  max-width: 90%;
+}
+
 @keyframes bounce {
   0%, 100% {
     transform: translateY(-25%);
@@ -962,6 +1063,10 @@ video {
   animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
 
+.cursor-pointer {
+  cursor: pointer;
+}
+
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
@@ -982,6 +1087,22 @@ video {
   grid-template-rows: 70% 30%;
 }
 
+.grid-rows-\[30\$\] {
+  grid-template-rows: 30$;
+}
+
+.grid-rows-\[30\%_\] {
+  grid-template-rows: 30%;
+}
+
+.grid-rows-\[30\%_70\%\] {
+  grid-template-rows: 30% 70%;
+}
+
+.grid-rows-\[40\%_60\%\] {
+  grid-template-rows: 40% 60%;
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -996,6 +1117,10 @@ video {
 
 .items-center {
   align-items: center;
+}
+
+.justify-normal {
+  justify-content: normal;
 }
 
 .justify-center {
@@ -1061,6 +1186,10 @@ video {
 
 .overflow-hidden {
   overflow: hidden;
+}
+
+.text-nowrap {
+  text-wrap: nowrap;
 }
 
 .rounded-2xl {
@@ -1176,11 +1305,6 @@ video {
 .border-red-200 {
   --tw-border-opacity: 1;
   border-color: rgb(254 202 202 / var(--tw-border-opacity));
-}
-
-.border-yellow-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(250 204 21 / var(--tw-border-opacity));
 }
 
 .bg-black {
@@ -1435,6 +1559,11 @@ video {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .pb-20 {
@@ -1697,19 +1826,14 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-yellow-500 {
-  --tw-text-opacity: 1;
-  color: rgb(234 179 8 / var(--tw-text-opacity));
-}
-
-.text-yellow-300 {
-  --tw-text-opacity: 1;
-  color: rgb(253 224 71 / var(--tw-text-opacity));
-}
-
 .text-yellow-400 {
   --tw-text-opacity: 1;
   color: rgb(250 204 21 / var(--tw-text-opacity));
+}
+
+.text-yellow-500 {
+  --tw-text-opacity: 1;
+  color: rgb(234 179 8 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -1916,14 +2040,9 @@ video {
   position: absolute;
 }
 
-.before\:top-10::before {
+.before\:-left-20::before {
   content: var(--tw-content);
-  top: 2.5rem;
-}
-
-.before\:top-5::before {
-  content: var(--tw-content);
-  top: 1.25rem;
+  left: -5rem;
 }
 
 .before\:top-6::before {
@@ -1931,54 +2050,14 @@ video {
   top: 1.5rem;
 }
 
-.before\:-left-full::before {
+.before\:top-0::before {
   content: var(--tw-content);
-  left: -100%;
+  top: 0px;
 }
 
-.before\:-left-5::before {
+.before\:left-0::before {
   content: var(--tw-content);
-  left: -1.25rem;
-}
-
-.before\:-left-10::before {
-  content: var(--tw-content);
-  left: -2.5rem;
-}
-
-.before\:-left-20::before {
-  content: var(--tw-content);
-  left: -5rem;
-}
-
-.before\:h-1\/2::before {
-  content: var(--tw-content);
-  height: 50%;
-}
-
-.before\:h-1\/3::before {
-  content: var(--tw-content);
-  height: 33.333333%;
-}
-
-.before\:h-1\/4::before {
-  content: var(--tw-content);
-  height: 25%;
-}
-
-.before\:h-1\/5::before {
-  content: var(--tw-content);
-  height: 20%;
-}
-
-.before\:h-1\/6::before {
-  content: var(--tw-content);
-  height: 16.666667%;
-}
-
-.before\:h-1::before {
-  content: var(--tw-content);
-  height: 0.25rem;
+  left: 0px;
 }
 
 .before\:h-2::before {
@@ -1991,29 +2070,9 @@ video {
   height: 1rem;
 }
 
-.before\:w-1\/2::before {
+.before\:h-full::before {
   content: var(--tw-content);
-  width: 50%;
-}
-
-.before\:w-1\/4::before {
-  content: var(--tw-content);
-  width: 25%;
-}
-
-.before\:w-1\/5::before {
-  content: var(--tw-content);
-  width: 20%;
-}
-
-.before\:w-1\/6::before {
-  content: var(--tw-content);
-  width: 16.666667%;
-}
-
-.before\:w-2\/6::before {
-  content: var(--tw-content);
-  width: 33.333333%;
+  height: 100%;
 }
 
 .before\:w-1\/12::before {
@@ -2021,9 +2080,35 @@ video {
   width: 8.333333%;
 }
 
+.before\:w-\[10\%\]::before {
+  content: var(--tw-content);
+  width: 10%;
+}
+
+.before\:w-\[40\%\]::before {
+  content: var(--tw-content);
+  width: 40%;
+}
+
+.before\:w-full::before {
+  content: var(--tw-content);
+  width: 100%;
+}
+
+.before\:translate-x-full::before {
+  content: var(--tw-content);
+  --tw-translate-x: 100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .before\:rounded-xl::before {
   content: var(--tw-content);
   border-radius: 0.75rem;
+}
+
+.before\:rounded-full::before {
+  content: var(--tw-content);
+  border-radius: 9999px;
 }
 
 .before\:bg-yellow-400::before {
@@ -2032,13 +2117,13 @@ video {
   background-color: rgb(250 204 21 / var(--tw-bg-opacity));
 }
 
-.before\:content-\[\'\'\]::before {
-  --tw-content: '';
+.before\:duration-500::before {
   content: var(--tw-content);
+  transition-duration: 500ms;
 }
 
-.before\:content-\[\'f\'\]::before {
-  --tw-content: 'f';
+.before\:content-\[\'\'\]::before {
+  --tw-content: '';
   content: var(--tw-content);
 }
 
@@ -2052,21 +2137,6 @@ video {
   left: -6rem;
 }
 
-.after\:top-1::after {
-  content: var(--tw-content);
-  top: 0.25rem;
-}
-
-.after\:top-10::after {
-  content: var(--tw-content);
-  top: 2.5rem;
-}
-
-.after\:-top-10::after {
-  content: var(--tw-content);
-  top: -2.5rem;
-}
-
 .after\:h-full::after {
   content: var(--tw-content);
   height: 100%;
@@ -2075,11 +2145,6 @@ video {
 .after\:w-1\/4::after {
   content: var(--tw-content);
   width: 25%;
-}
-
-.after\:w-1\/2::after {
-  content: var(--tw-content);
-  width: 50%;
 }
 
 .after\:skew-x-12::after {
@@ -2255,6 +2320,19 @@ video {
   --tw-shadow: var(--tw-shadow-colored);
 }
 
+.hover\:before\:translate-x-0:hover::before {
+  content: var(--tw-content);
+  --tw-translate-x: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+@media not all and (min-width: 1280px) {
+  .max-xl\:before\:hidden::before {
+    content: var(--tw-content);
+    display: none;
+  }
+}
+
 @media (min-width: 640px) {
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -2278,6 +2356,10 @@ video {
     max-height: 1200px;
   }
 
+  .md\:max-w-\[90\%\] {
+    max-width: 90%;
+  }
+
   .md\:shrink-0 {
     flex-shrink: 0;
   }
@@ -2288,6 +2370,18 @@ video {
 
   .md\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-\[40\%_60\%\] {
+    grid-template-columns: 40% 60%;
+  }
+
+  .md\:grid-cols-\[45\%_60\%\] {
+    grid-template-columns: 45% 60%;
+  }
+
+  .md\:grid-cols-\[45\%_55\%\] {
+    grid-template-columns: 45% 55%;
   }
 
   .md\:grid-rows-2 {
@@ -2326,8 +2420,26 @@ video {
     padding-bottom: 2rem;
   }
 
+  .md\:text-left {
+    text-align: left;
+  }
+
   .md\:font-serif {
     font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+  }
+
+  .md\:font-sans {
+    font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  }
+
+  .md\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .md\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 
   .md\:font-bold {
@@ -2336,7 +2448,77 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:ml-12 {
+    margin-left: 3rem;
+  }
+
+  .lg\:ml-10 {
+    margin-left: 2.5rem;
+  }
+
+  .lg\:grid {
+    display: grid;
+  }
+
+  .lg\:h-\[calc\(100vh-90px\)\] {
+    height: calc(100vh - 90px);
+  }
+
+  .lg\:w-\[85\%\] {
+    width: 85%;
+  }
+
+  .lg\:w-\[\] {
+    width: ;
+  }
+
+  .lg\:w-\[80\%\] {
+    width: 80%;
+  }
+
   .lg\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-\[45\%_55\%\] {
+    grid-template-columns: 45% 55%;
+  }
+
+  .lg\:grid-rows-1 {
+    grid-template-rows: repeat(1, minmax(0, 1fr));
+  }
+
+  .lg\:items-start {
+    align-items: flex-start;
+  }
+
+  .lg\:rounded-md {
+    border-radius: 0.375rem;
+  }
+
+  .lg\:text-left {
+    text-align: left;
+  }
+
+  .lg\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .lg\:after\:bg-yellow-400::after {
+    content: var(--tw-content);
+    --tw-bg-opacity: 1;
+    background-color: rgb(250 204 21 / var(--tw-bg-opacity));
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl\:ml-20 {
+    margin-left: 5rem;
+  }
+
+  .xl\:before\:hidden::before {
+    content: var(--tw-content);
+    display: none;
   }
 }
