--- a/main/project/webpage.css
+++ b/main/project/webpage.css
@@ -606,8 +606,36 @@ video {
   right: 2.25rem;
 }
 
+.top-0 {
+  top: 0px;
+}
+
 .top-5 {
   top: 1.25rem;
+}
+
+.left-0 {
+  left: 0px;
+}
+
+.left-20 {
+  left: 5rem;
+}
+
+.left-10 {
+  left: 2.5rem;
+}
+
+.left-1 {
+  left: 0.25rem;
+}
+
+.left-14 {
+  left: 3.5rem;
+}
+
+.left-12 {
+  left: 3rem;
 }
 
 .z-10 {
@@ -650,14 +678,13 @@ video {
   margin: auto;
 }
 
+.m-\[5\%\] {
+  margin: 5%;
+}
+
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
-}
-
-.mx-\[5\%\] {
-  margin-left: 5%;
-  margin-right: 5%;
 }
 
 .mx-auto {
@@ -675,9 +702,24 @@ video {
   margin-bottom: 1rem;
 }
 
+.my-\[10\%\] {
+  margin-top: 10%;
+  margin-bottom: 10%;
+}
+
 .my-auto {
   margin-top: auto;
   margin-bottom: auto;
+}
+
+.mx-\[5\%\] {
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.my-\[5\%\] {
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
 
 .mb-10 {
@@ -736,20 +778,12 @@ video {
   margin-top: 2rem;
 }
 
-.ml-8 {
-  margin-left: 2rem;
-}
-
-.ml-20 {
-  margin-left: 5rem;
-}
-
-.ml-2 {
-  margin-left: 0.5rem;
-}
-
 .inline-block {
   display: inline-block;
+}
+
+.inline {
+  display: inline;
 }
 
 .flex {
@@ -788,6 +822,10 @@ video {
   height: 80%;
 }
 
+.h-8 {
+  height: 2rem;
+}
+
 .h-\[100px\] {
   height: 100px;
 }
@@ -802,6 +840,10 @@ video {
 
 .h-\[150px\] {
   height: 150px;
+}
+
+.h-\[200px\] {
+  height: 200px;
 }
 
 .h-\[266px\] {
@@ -828,10 +870,6 @@ video {
   height: 90px;
 }
 
-.h-\[calc\(100vh-40px\)\] {
-  height: calc(100vh - 40px);
-}
-
 .h-full {
   height: 100%;
 }
@@ -842,42 +880,6 @@ video {
 
 .h-svh {
   height: 100svh;
-}
-
-.h-\[calc\(100vh-60px\)\] {
-  height: calc(100vh - 60px);
-}
-
-.h-\[calc\(100vh-0px\)\] {
-  height: calc(100vh - 0px);
-}
-
-.h-\[calc\(100vh-90px\)\] {
-  height: calc(100vh - 90px);
-}
-
-.h-2\/5 {
-  height: 40%;
-}
-
-.h-\[80\%\] {
-  height: 80%;
-}
-
-.h-\[400px\] {
-  height: 400px;
-}
-
-.h-\[300px\] {
-  height: 300px;
-}
-
-.h-\[15x0px\] {
-  height: 15x0px;
-}
-
-.h-\[200px\] {
-  height: 200px;
 }
 
 .max-h-\[1300px\] {
@@ -976,6 +978,11 @@ video {
   width: 900px;
 }
 
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
 .w-full {
   width: 100%;
 }
@@ -984,57 +991,42 @@ video {
   width: 100vw;
 }
 
-.w-\[\%\] {
-  width: %;
+.w-1 {
+  width: 0.25rem;
 }
 
-.w-\[8\%\] {
-  width: 8%;
-}
-
-.w-\[0\%\] {
-  width: 0%;
-}
-
-.w-\[85\%\] {
-  width: 85%;
-}
-
-.w-8 {
-  width: 2rem;
+.w-1\/6 {
+  width: 16.666667%;
 }
 
 .w-\[\] {
   width: ;
 }
 
-.w-fit {
-  width: -moz-fit-content;
-  width: fit-content;
+.min-w-fit {
+  min-width: -moz-fit-content;
+  min-width: fit-content;
 }
 
-.max-w-\[\] {
-  max-width: ;
-}
-
-.max-w-\[500px\] {
-  max-width: 500px;
+.min-w-full {
+  min-width: 100%;
 }
 
 .max-w-\[480px\] {
   max-width: 480px;
 }
 
-.max-w-\[80\] {
-  max-width: 80;
-}
-
-.max-w-\[80\%\] {
-  max-width: 80%;
-}
-
 .max-w-\[90\%\] {
   max-width: 90%;
+}
+
+.max-w-fit {
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+}
+
+.max-w-full {
+  max-width: 100%;
 }
 
 @keyframes bounce {
@@ -1071,6 +1063,10 @@ video {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
@@ -1083,24 +1079,12 @@ video {
   grid-template-rows: repeat(2, minmax(0, 1fr));
 }
 
-.grid-rows-\[70\%_30\%\] {
-  grid-template-rows: 70% 30%;
-}
-
-.grid-rows-\[30\$\] {
-  grid-template-rows: 30$;
-}
-
-.grid-rows-\[30\%_\] {
-  grid-template-rows: 30%;
-}
-
-.grid-rows-\[30\%_70\%\] {
-  grid-template-rows: 30% 70%;
-}
-
 .grid-rows-\[40\%_60\%\] {
   grid-template-rows: 40% 60%;
+}
+
+.grid-rows-\[70\%_30\%\] {
+  grid-template-rows: 70% 30%;
 }
 
 .flex-col {
@@ -1117,10 +1101,6 @@ video {
 
 .items-center {
   align-items: center;
-}
-
-.justify-normal {
-  justify-content: normal;
 }
 
 .justify-center {
@@ -1186,6 +1166,10 @@ video {
 
 .overflow-hidden {
   overflow: hidden;
+}
+
+.text-wrap {
+  text-wrap: wrap;
 }
 
 .text-nowrap {
@@ -1268,6 +1252,10 @@ video {
   border-top-width: 1px;
 }
 
+.border-s {
+  border-inline-start-width: 1px;
+}
+
 .border-dashed {
   border-style: dashed;
 }
@@ -1305,6 +1293,11 @@ video {
 .border-red-200 {
   --tw-border-opacity: 1;
   border-color: rgb(254 202 202 / var(--tw-border-opacity));
+}
+
+.border-slate-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(148 163 184 / var(--tw-border-opacity));
 }
 
 .bg-black {
@@ -1402,6 +1395,11 @@ video {
   background-color: rgb(226 232 240 / var(--tw-bg-opacity));
 }
 
+.bg-slate-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(51 65 85 / var(--tw-bg-opacity));
+}
+
 .bg-slate-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(15 23 42 / var(--tw-bg-opacity));
@@ -1449,9 +1447,19 @@ video {
   background-repeat: no-repeat;
 }
 
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.object-fill {
+  -o-object-fit: fill;
+     object-fit: fill;
 }
 
 .p-1 {
@@ -1551,6 +1559,11 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -1559,11 +1572,6 @@ video {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
-}
-
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
 }
 
 .pb-20 {
@@ -1694,6 +1702,10 @@ video {
   font-weight: 600;
 }
 
+.font-thin {
+  font-weight: 100;
+}
+
 .uppercase {
   text-transform: uppercase;
 }
@@ -1704,6 +1716,18 @@ video {
 
 .not-italic {
   font-style: normal;
+}
+
+.leading-3 {
+  line-height: .75rem;
+}
+
+.leading-8 {
+  line-height: 2rem;
+}
+
+.leading-10 {
+  line-height: 2.5rem;
 }
 
 .text-\[red\] {
@@ -1811,6 +1835,11 @@ video {
   color: rgb(127 29 29 / var(--tw-text-opacity));
 }
 
+.text-slate-400 {
+  --tw-text-opacity: 1;
+  color: rgb(148 163 184 / var(--tw-text-opacity));
+}
+
 .text-slate-800 {
   --tw-text-opacity: 1;
   color: rgb(30 41 59 / var(--tw-text-opacity));
@@ -1834,6 +1863,10 @@ video {
 .text-yellow-500 {
   --tw-text-opacity: 1;
   color: rgb(234 179 8 / var(--tw-text-opacity));
+}
+
+.text-opacity-0 {
+  --tw-text-opacity: 0;
 }
 
 .underline {
@@ -2021,10 +2054,10 @@ video {
   position: absolute;
   top: 0px;
   width: 4rem;
-  border-bottom: 6px solid ;
+  border-bottom: 6px solid;
 }
 
-.text_shadow{
+.text_shadow {
   text-shadow: 1px 2px 2px white;
   font-weight: bold;
 }
@@ -2045,9 +2078,9 @@ video {
   left: -5rem;
 }
 
-.before\:top-6::before {
+.before\:left-0::before {
   content: var(--tw-content);
-  top: 1.5rem;
+  left: 0px;
 }
 
 .before\:top-0::before {
@@ -2055,9 +2088,54 @@ video {
   top: 0px;
 }
 
-.before\:left-0::before {
+.before\:top-6::before {
   content: var(--tw-content);
-  left: 0px;
+  top: 1.5rem;
+}
+
+.before\:top-10::before {
+  content: var(--tw-content);
+  top: 2.5rem;
+}
+
+.before\:top-5::before {
+  content: var(--tw-content);
+  top: 1.25rem;
+}
+
+.before\:top-3::before {
+  content: var(--tw-content);
+  top: 0.75rem;
+}
+
+.before\:left-20::before {
+  content: var(--tw-content);
+  left: 5rem;
+}
+
+.before\:left-2::before {
+  content: var(--tw-content);
+  left: 0.5rem;
+}
+
+.before\:-left-2::before {
+  content: var(--tw-content);
+  left: -0.5rem;
+}
+
+.before\:-left-5::before {
+  content: var(--tw-content);
+  left: -1.25rem;
+}
+
+.before\:-left-7::before {
+  content: var(--tw-content);
+  left: -1.75rem;
+}
+
+.before\:-left-10::before {
+  content: var(--tw-content);
+  left: -2.5rem;
 }
 
 .before\:h-2::before {
@@ -2065,14 +2143,24 @@ video {
   height: 0.5rem;
 }
 
-.before\:h-4::before {
-  content: var(--tw-content);
-  height: 1rem;
-}
-
 .before\:h-full::before {
   content: var(--tw-content);
   height: 100%;
+}
+
+.before\:h-\[\]::before {
+  content: var(--tw-content);
+  height: ;
+}
+
+.before\:h-\[2px\]::before {
+  content: var(--tw-content);
+  height: 2px;
+}
+
+.before\:h-\[1px\]::before {
+  content: var(--tw-content);
+  height: 1px;
 }
 
 .before\:w-1\/12::before {
@@ -2080,19 +2168,39 @@ video {
   width: 8.333333%;
 }
 
+.before\:w-full::before {
+  content: var(--tw-content);
+  width: 100%;
+}
+
+.before\:w-1\/2::before {
+  content: var(--tw-content);
+  width: 50%;
+}
+
+.before\:w-\[5\%\]::before {
+  content: var(--tw-content);
+  width: 5%;
+}
+
 .before\:w-\[10\%\]::before {
   content: var(--tw-content);
   width: 10%;
 }
 
-.before\:w-\[40\%\]::before {
+.before\:w-\[0\%\]::before {
   content: var(--tw-content);
-  width: 40%;
+  width: 0%;
 }
 
-.before\:w-full::before {
+.before\:w-\[12\%\]::before {
   content: var(--tw-content);
-  width: 100%;
+  width: 12%;
+}
+
+.before\:w-\[15\%\]::before {
+  content: var(--tw-content);
+  width: 15%;
 }
 
 .before\:translate-x-full::before {
@@ -2101,20 +2209,26 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.before\:rounded-xl::before {
-  content: var(--tw-content);
-  border-radius: 0.75rem;
-}
-
 .before\:rounded-full::before {
   content: var(--tw-content);
   border-radius: 9999px;
+}
+
+.before\:rounded-xl::before {
+  content: var(--tw-content);
+  border-radius: 0.75rem;
 }
 
 .before\:bg-yellow-400::before {
   content: var(--tw-content);
   --tw-bg-opacity: 1;
   background-color: rgb(250 204 21 / var(--tw-bg-opacity));
+}
+
+.before\:bg-white::before {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .before\:duration-500::before {
@@ -2124,6 +2238,11 @@ video {
 
 .before\:content-\[\'\'\]::before {
   --tw-content: '';
+  content: var(--tw-content);
+}
+
+.before\:content-\[\]::before {
+  --tw-content: ;
   content: var(--tw-content);
 }
 
@@ -2151,12 +2270,6 @@ video {
   content: var(--tw-content);
   --tw-skew-x: 12deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.after\:bg-yellow-400::after {
-  content: var(--tw-content);
-  --tw-bg-opacity: 1;
-  background-color: rgb(250 204 21 / var(--tw-bg-opacity));
 }
 
 .after\:content-\[\'\'\]::after {
@@ -2333,6 +2446,12 @@ video {
   }
 }
 
+@media not all and (min-width: 768px) {
+  .max-md\:left-0 {
+    left: 0px;
+  }
+}
+
 @media (min-width: 640px) {
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -2356,10 +2475,6 @@ video {
     max-height: 1200px;
   }
 
-  .md\:max-w-\[90\%\] {
-    max-width: 90%;
-  }
-
   .md\:shrink-0 {
     flex-shrink: 0;
   }
@@ -2372,20 +2487,12 @@ video {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
-  .md\:grid-cols-\[40\%_60\%\] {
-    grid-template-columns: 40% 60%;
-  }
-
-  .md\:grid-cols-\[45\%_60\%\] {
-    grid-template-columns: 45% 60%;
-  }
-
-  .md\:grid-cols-\[45\%_55\%\] {
-    grid-template-columns: 45% 55%;
-  }
-
   .md\:grid-rows-2 {
     grid-template-rows: repeat(2, minmax(0, 1fr));
+  }
+
+  .md\:items-center {
+    align-items: center;
   }
 
   .md\:justify-between {
@@ -2398,6 +2505,10 @@ video {
 
   .md\:rounded-full {
     border-radius: 9999px;
+  }
+
+  .md\:bg-inherit {
+    background-color: inherit;
   }
 
   .md\:bg-white {
@@ -2420,21 +2531,12 @@ video {
     padding-bottom: 2rem;
   }
 
-  .md\:text-left {
-    text-align: left;
-  }
-
-  .md\:font-serif {
-    font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
-  }
-
   .md\:font-sans {
     font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   }
 
-  .md\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
+  .md\:font-serif {
+    font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
   }
 
   .md\:text-4xl {
@@ -2442,34 +2544,32 @@ video {
     line-height: 2.5rem;
   }
 
+  .md\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .md\:text-9xl {
+    font-size: 8rem;
+    line-height: 1;
+  }
+
   .md\:font-bold {
     font-weight: 700;
+  }
+
+  .md\:text-opacity-100 {
+    --tw-text-opacity: 1;
   }
 }
 
 @media (min-width: 1024px) {
-  .lg\:ml-12 {
-    margin-left: 3rem;
-  }
-
   .lg\:ml-10 {
     margin-left: 2.5rem;
   }
 
-  .lg\:grid {
-    display: grid;
-  }
-
   .lg\:h-\[calc\(100vh-90px\)\] {
     height: calc(100vh - 90px);
-  }
-
-  .lg\:w-\[85\%\] {
-    width: 85%;
-  }
-
-  .lg\:w-\[\] {
-    width: ;
   }
 
   .lg\:w-\[80\%\] {
@@ -2500,9 +2600,19 @@ video {
     text-align: left;
   }
 
+  .lg\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
   .lg\:text-5xl {
     font-size: 3rem;
     line-height: 1;
+  }
+
+  .lg\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 
   .lg\:after\:bg-yellow-400::after {
@@ -2515,10 +2625,5 @@ video {
 @media (min-width: 1280px) {
   .xl\:ml-20 {
     margin-left: 5rem;
-  }
-
-  .xl\:before\:hidden::before {
-    content: var(--tw-content);
-    display: none;
   }
 }
